# rs-jerry-driver

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
configFiles/: README.md  example.json  schema.json
gtest/dpdkSource/: CMakeLists.txt  README.md  floatsamples.in  floatsamples.norm  hrzrHeaderParserTest.cc  hrzrMetadataTest.cc  hrzrParserTest.cc
gtest/iqClient/: CMakeLists.txt  iqClientTest.cc
include/iqClient/: grpcClient.h  iqClient.h  linuxSource.h
include/iqClient/common/: definitions.h  exceptions.h  hrzrTestBinaryHelper.h  jsonParser.h
include/iqClient/dpdkSource/: dpdkSource.h  hrzrHeaderParser.h  hrzrMetadataParser.h  hrzrParser.h
include/iqClient/udpSource/: udpSource.h
include/iqClient/udpTransmitter/: hrzrUdpTransmitter.h
proto/: channel.proto  channelSettings.proto  deviceInfo.proto  empty.proto  errors.proto  general.proto  login.proto  msr4RemoteStreaming.proto  msr4RemoteStreamingFromMSR4.proto  networkStreamingSettings.proto  protocols.proto  ready.proto  streamingSettings.proto  streamingStatus.proto
src/dpdkSource/: CMakeLists.txt  dpdkSource.cc  hrzrHeaderParser.cc  hrzrMetadataParser.cc  hrzrParser.cc
src/grpcClient/: CMakeLists.txt  grpcClient.cc
src/iqClient/: CMakeLists.txt  iqClient.cc
src/udpSource/: CMakeLists.txt  udpSource.cc
src/udpTransmitter/: CMakeLists.txt  hrzrUdpTransmitter.cc
